# homework_10-web-

./: README.md  pyproject.toml
hw_project/hw_project/: settings.py
hw_project/quotes/templates/quotes/: index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: urls.py  views.py
